<resources>
    <string name="app_name">신삼 가이드</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Eunma Studio</string>
    <string name="nav_header_subtitle">wns5388@naver.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_login">Login</string>
    <string name="notice">공지사항</string>
    <string name="app_info">앱 정보</string>

    <string name="menu_home">신삼 가이드</string>
    <string name="menu_alarm">알림설정</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="button_guide_description">
        \n <b>기본가이드</b>는 게임에 대한 전반적인 지식과 정보를 얻으실 수 있습니다.
        \n <b>제작자Tip</b>은 제작자가 제공하는 정보를 얻으실 수 있습니다. 단 절대적이지 않고 상황/업데이트여부에 따라 달라질 수 있습니다.
        \n <b>유저Tip</b>은 유저들끼리 정보를 나누고 읽으실 수 있습니다.</string>
    <string name="button_event_description">
        \n <b>메인 이벤트</b>는 이벤트텝에 있는 기본 이벤트에 대한 정보가 있습니다.
        \n <b>시즌 이벤트</b>는 시즌과 관련된 이벤트에 대한 정보가 있습니다.
        \n <b>특별 이벤트</b>는 명절,n주년 등 특수 이벤트에 대한 정보가 있습니다.
        \n <b>소비 이벤트</b>는 원보를 사용해 참여할 수 있는 이벤트에 대한 정보가 있습니다.</string>
    <string name="button_contents_description">
        \n <b>메인 컨텐츠</b>는 신삼국지의 주요 컨텐츠입니다.
        \n <b>시즌 컨텐츠</b>는 시즌이 변하면서 추가된 컨텐츠 입니다.
        \n <b>신규 컨텐츠</b>는 이번 시즌 새롭게 추가된 컨텐츠입니다.</string>

    <string name="alarm1_title">새 버전 소식 받기</string>
    <string name="alarm1_description">신규 버전 출시가 되면 알림을 받습니다.</string>

    <string name="alarm2_title">요일별 일정</string>
    <string name="alarm2_description">요일별로 컨텐츠 알림을 1시간 전에 받습니다.</string>

    <string name="alarm3_title">깜빡이 금지</string>
    <string name="alarm3_description">오후 10시에 잊은건 없는지 확인 알림을 받습니다.</string>

    <string name="alarm4_title">시즌 안내</string>
    <string name="alarm4_description">시즌결산 및 종료, 신규시즌 오픈 시 알림을 받습니다.</string>
    ...

</resources>